examples/malgo/error/ErrorKind2.mlg
module ErrorKind2 = {
  data A = A;
  f :: A a -> A a;
  f x = x;
}